# eligibility-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-bitemporal-over-event-sourcing.md  0002-outbox-over-dual-write.md
docs/runbooks/: anomaly-detection.md  dlq-nonempty.md  projector-lag.md  saga-stuck.md
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
pulumi/gcp/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
samples/: 834_demo.x12  README.md  generate_834_demo.py  members_demo.csv
scripts/: demo.sh  replay_dlq.py  seed_demo.sh  wait-for-healthy.sh  write-all-readmes.sh  write-poetry-ci.sh
services/atlas/: Dockerfile  alembic.ini  pyproject.toml
services/bff/: Dockerfile
services/group/: Dockerfile  alembic.ini  pyproject.toml
services/member/: Dockerfile  alembic.ini  pyproject.toml
services/plan/: Dockerfile  alembic.ini  pyproject.toml
services/plan/app/: main.py  settings.py
services/plan/app/application/: commands.py
services/plan/app/domain/: plan.py
services/plan/app/infra/: cache.py  models.py  repo.py
services/plan/app/interfaces/: api.py
services/plan/migrations/: env.py
services/plan/tests/: conftest.py  test_plan.py
tests/chaos/: kill_projector.sh
tests/e2e/: verify_after_ingest.py
tests/golden/: 834_large.x12  834_replace.x12  README.md  (+2 more)
(+87 files in other folders)
