[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "eligibility-common @ file:///app/libs/python-common",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "alembic>=1.13",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
